# cloudwatch-logstream-cleaner

./: .gitignore  README.md  main.py  pyproject.toml  sonar-project.properties  test_main.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
