[project]
name = "cloudwatch-logstream-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.9",
    "boto3-stubs==1.42.9",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]
