[project]
name = "cloudwatch-logstream-cleaner"
version = "0.1.0"
description = "A utility to delete CloudWatch log streams older than a specified number of days"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.40",
    "boto3-stubs~=1.43.40",
    "botocore>=1.43.40",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
